# csharp-driver

./: .gitignore  CONTRIBUTING.md  Makefile
.github/workflows/: main.yml
examples/RustWrapper/: Program.cs  RustWrapper.csproj
examples/SerializationExample/: Program.cs  SerializationExample.csproj  run.sh
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: ffi.rs  lib.rs  prepared_statement.rs  row_set.rs  serialize.rs  session.rs  task.rs
rust/src/pre_serialized_values/: mod.rs  pre_serialized_values.rs  pre_serialized_values_safe.rs  pre_serialized_values_unsafe.rs
src/Cassandra/: BatchStatement.cs  BoundStatement.cs  Builder.cs  Cassandra.csproj  Cluster.cs  Configuration.cs  CqlQueryTools.cs  Extensions.cs  Host.cs  KeyspaceMetadata.cs  Metadata.cs  (+8 more)
src/Cassandra.BrokenIntegrationTests/: ShardAwareOptionsTests.cs  SimulacronTest.cs
src/Cassandra.BrokenTests/: AbstractResponseTest.cs  BuilderTests.cs  ClusterTests.cs  CollectionTests.cs  HostConnectionPoolTests.cs  IOUnitTests.cs  RequestHandlerTests.cs  SchemaParserTests.cs  SessionTests.cs  TargetTests.cs  TestConfigurationBuilder.cs  TokenTests.cs
src/Cassandra.IntegrationTests/: Cassandra.IntegrationTests.csproj  ShardAwarenessTests.cs
src/Cassandra.Tests/: ClusterTests.cs  ConnectionTests.cs  FrameParserTests.cs  HostConnectionPoolTests.cs  KeyspaceMetadataTests.cs  OperationStateExtensions.cs  RequestExecutionTests.cs  RequestHandlerMockTests.cs  RequestHandlerTests.cs  RowSetUnitTests.cs  StatementTests.cs  TestConfigurationBuilder.cs  TestHelper.cs  TokenTests.cs  UtilsTests.cs
(+92 files in other folders)
