[package]
name = "csharp_wrapper"
version = "0.0.0"
edition = "2024"

[dependencies]
scylla = { version = "1.3.1", git = "https://github.com/scylladb-zpp-2025-csharp-rs-driver/scylla-rust-driver.git", branch = "main" }
scylla_cql = { version = "1.3.1", git = "https://github.com/scylladb-zpp-2025-csharp-rs-driver/scylla-rust-driver.git", package = "scylla-cql", branch = "main" }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
thiserror = "2"

[lib]
crate-type = ["cdylib", "lib"] # "lib" needed for doctests

[dev-dependencies]
ntest = "0.9"
uuid = "1"

[lints.rust]
unsafe-op-in-unsafe-fn = "warn"
unnameable_types = "warn"
# unreachable_pub = "warn"
